Bug 42367 - [SNA] Selecting (icons) on xfdesktop has visual glitch
Summary: [SNA] Selecting (icons) on xfdesktop has visual glitch
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-29 06:46 UTC by Paul Neumann
Modified: 2011-10-29 12:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Paul Neumann 2011-10-29 06:46:28 UTC
On SNA, selecting icons on the desktop on xfdesktop using the mouse makes part of the rectangle showing the selected region black when it should be transparent. This happens preferrably when selecting icons, but not exclusively, as it also happens sometimes when there is nothing selected. The rectangle is black from left to the mouse cursor at the right at that moment/height.
Comment 1 Chris Wilson 2011-10-29 10:25:20 UTC
Reproduced on a gen6, and when I turned on debugging it generated white opaque regions rather than black. So possibly uninitialised.

Any clue as to whether this is a recent regression, whilst I try to narrow down the operation causing the issue?
Comment 2 Chris Wilson 2011-10-29 10:42:18 UTC
Bisection indicates that things started going wrong on gen6 with

commit 0b83abfb2bc3f65447205048ae0af1a94fa9ef15
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Oct 18 14:43:37 2011 +0100

    sna/gen6: Don't modify composite arguments whilst checking for BLT
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

The glitch there is slightly different and obviously not the gen3 one. Ho hum.
Comment 3 Chris Wilson 2011-10-29 11:01:23 UTC
I don't think this explains everything,but it makes my snb happier:

commit 4835fe5b2e19ac456773565399f334845f7442c0
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Oct 29 18:56:29 2011 +0100

    sna/genX: Improve reduction of Render operator to BLT alu
    
    This appeared to introduce a visual gitch into the xfce4 selection box
    on gen6 at least.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=42367
    Reported-by: Paul Neumann <paul104x@yahoo.de>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Sadly the keyboard and trackpad has died on my last remaining gen3 netbook (which due to ACPI bugs on it,makes it darn unusable) so testing what went wrong there is going to take a bit longer.
Comment 4 Paul Neumann 2011-10-29 12:02:55 UTC
These commits do not fix the problem for me.

What I noticed though, is that after a long X session with doing things like watching (flash) videos and normal internet usage the bug seems (just my feeling, can't prove it by any means) harder to trigger. Whereas, after restarting X, I can trigger the bug almost immediately.
I also noticed that when I do not select any icon, the black (sometimes grey) glitch does not appear when selecting upwards, only when expanding the selection downwards the screen.
Comment 5 Chris Wilson 2011-10-29 12:10:55 UTC
This appears to have fixed it:

commit 17ba07a7befc7f442ae1c917a087ac026516d886
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Oct 29 20:03:37 2011 +0100

    sna/gen3: Set the src flags for fill
    
    A regression from c2040fb8e62076d87f7a5b407505ee3f3482945e (sna: Remove
    the memset(0) of the fill op) left the flags for the source channel
    uninitalised leaving the shader construction undefined and causing
    visual glitches.
    
    Reported-by: Paul Neumann <paul104x@yahoo.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42367
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Thanks for the bug report.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.