sna/genX: Improve reduction of Render operator to BLT alu

This appeared to introduce a visual gitch into the xfce4 selection box
on gen6 at least.

References: https://bugs.freedesktop.org/show_bug.cgi?id=42367
Reported-by: Paul Neumann <paul104x@yahoo.de>
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>